objects/Fachbereich__c.object
<CustomObject>
    <label>Fachbereich</label>
    <nameField>
        <label>Fachbereich</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fachbereiche</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fachbereiche</relationshipLabel>
        <relationshipName>Fachbereiche</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachbereich</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Fachbereiche</relationshipLabel>
        <relationshipName>Fachbereiche</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniformProvided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uniform Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiredDocuments__c</fullName>
        <label>Required Documents</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arbeitsmedizinische Vorsorge</fullName>
                </value>
                <value>
                    <fullName>Führungszeugnis</fullName>
                </value>
                <value>
                    <fullName>Erweitertes Führungszeugnis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactOfSpecialtyDepartment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Of Specialty Department</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Fachbereiche (AP Personal)</relationshipLabel>
        <relationshipName>FachbereicheAPPersonal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactOfHumanResourcesDepartment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Of  Human Resources Department</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Fachbereiche (AP Fachbereich)</relationshipLabel>
        <relationshipName>Fachbereiche1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>